# capellaInterface

./: .gitignore  README.md  pyproject.toml
plans/: capella-interface-plan.md  slc-download-cli-plan.md
src/capella/: __init__.py  catalog.py  cli.py  download.py  levels.py
tests/: conftest.py  test_catalog.py  test_cli.py  test_download.py  test_levels.py
